# road-crossing

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
behavior_tree_nodes/include/: parallel_nodes.hh
behavior_tree_nodes/src/: parallel_nodes.cc  perpendicular_tree.cc
behavior_trees/: main_tree.xml
include/road_crossing/: get_azimuth.h  get_gps.h  misc.h  movement.h  road_cross_tree.h  start_srv.h  vehicles.h
launch/: test.launch
msg/: UTM_data.msg  injector_msgs.msg  place_data.msg
road_crossing/: CMakeLists.txt  dist_log.py  package.xml  process_logs.py
road_crossing/data/: apriltags.yaml
road_crossing/include/road_crossing/: get_azimuth.h  get_gps.h  misc.h  movement.h  road_cross_tree.h  start_srv.h  vehicles.h
road_crossing/launch/: apriltags.launch  crossing.launch  demo.launch  services.launch  test.launch
road_crossing/nodes/: apriltag_detector  apriltag_to_vehicle  get_finish_srv  get_road_info_srv  get_segment_srv  get_segment_srv.py  get_suitability_srv  get_suitability_srv.py  road_cost_run  save_test_road  save_test_road.py  start  test_injector
road_crossing/scripts/: process_logs.py  save_test_road.py
road_crossing/src/: get_azimuth.cpp  get_gps.cpp  main.cpp  main_tree.xml  misc.cpp  movement.cpp  road_cross_tree.cpp  start.py  start_srv.cpp  test_injector.py  vehicles.cpp
road_crossing/src/road_cost/: __init__.py  get_finish_srv.py  get_road_info_srv.py  get_segment_srv.py  get_suitability_srv.py  road_cost.py  road_curvature.py  road_detection.py  road_elevation.py
road_crossing/srv/: get_finish.srv  get_road_info.srv  get_road_segment.srv  get_suitability.srv
road_crossing_msgs/: CMakeLists.txt  package.xml
road_crossing_msgs/msg/: injector_msgs.msg  start_msgs.msg
src/: get_azimuth.cpp  get_gps.cpp  get_road_info_srv.py  main.cpp  main_tree.xml  main_tree_dev.xml  misc.cpp  movement.cpp  palette.xml  road_cross_tree.cpp  road_info.py  start_srv.cpp  test.cpp  test_injector.py  test_tree.xml  vehicles.cpp
src/road_cost/: get_segment_srv.py  get_suitability_srv.py  road_cost.py  road_cost_run.py  sjtsk_to_utm.py
srv/: get_road_info.srv  start_algorithm.srv
