<?xml version="1.0"?>
<package format="2">
  <name>road_crossing_msgs</name>
  <version>1.0.0</version>
  <description>The road_crossing package messages</description>

  <author email="vlkjan6@fel.cvut.cz">Vlk Jan</author>
  <maintainer email="vlkjan6@fel.cvut.cz">Vlk Jan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
